<resources>
    <string name="app_name">ALUHomework1</string>
    <string name="action_settings">Settings</string>
    <string name="name">Jan Nowak</string>
    <string name="occupation">AndroidLevelUp course participant</string>
    <string name="chat">Chat</string>
    <string name="phone">Phone</string>
    <string name="postsCount">1.5 K</string>
    <string name="followersCount">17.8 K</string>
    <string name="followingCount">1.3 K</string>
    <string name="postsTitle">Posts</string>
    <string name="followersTitle">Followers</string>
    <string name="followingTitle">Following</string>
    <string name="loremIpsumText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a,
        scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac
        diam.
    </string>
    <string name="websiteTitle">Website</string>
    <string name="emailTitle">Email</string>
    <string name="emailValue">j.nowak@mail.com</string>
    <string name="websiteValue">linkedin.com/jan-nowak</string>
    <string name="phoneTitle">Phone</string>
    <string name="locationTitle">Location</string>
    <string name="phoneValue">(+48) 666 666 666</string>
    <string name="locationValue">Warsaw</string>
</resources>
