<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:theme="@style/ThemeOverlay.MaterialComponents.Light"
        app:cardBackgroundColor="?attr/colorBackgroundFloating"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:id="@+id/cardView">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp"
                android:id="@+id/NameTextView"
                style="@style/NameText"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/occupation"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NameTextView"
                android:layout_marginTop="8dp"
                android:id="@+id/OccupationTextView"
                style="@style/SecondaryTextCentered"/>

        <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profileCircleImageView"
                android:layout_width="96dp"
                android:layout_height="96dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/OccupationTextView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" android:src="@mipmap/jn_icon_round"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_chat_light_green_24dp"
                android:id="@+id/chatIconImageView"
                app:layout_constraintEnd_toStartOf="@+id/profileCircleImageView"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@+id/profileCircleImageView"
                app:layout_constraintBottom_toBottomOf="@+id/profileCircleImageView"
                android:contentDescription="@string/chat"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_phone_light_green_24dp"
                android:id="@+id/phoneIconImageView"
                app:layout_constraintTop_toTopOf="@+id/profileCircleImageView"
                app:layout_constraintBottom_toBottomOf="@+id/profileCircleImageView"
                app:layout_constraintStart_toEndOf="@+id/profileCircleImageView"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/phone"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@drawable/ic_person_add_white_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"/>

        <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/profileCircleImageView"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>

        <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/followersTitleTextView"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="16dp"/>
        <View
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="16dp"/>

        <TextView
                android:text="@string/postsCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/postsCountTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/followersCountTextView"
                android:layout_marginStart="32dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toTopOf="@+id/followersCountTextView"
                app:layout_constraintBottom_toBottomOf="@+id/followersCountTextView"
                style="@style/SocialStatsNumbersText"/>


        <TextView
                android:text="@string/followersCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/followersCountTextView"
                app:layout_constraintStart_toEndOf="@+id/postsCountTextView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/fillowingCountTextView"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                android:layout_marginTop="16dp"
                style="@style/SocialStatsNumbersText"/>

        <TextView
                android:text="@string/followingCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/fillowingCountTextView"
                app:layout_constraintStart_toEndOf="@+id/followersCountTextView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toTopOf="@+id/followersCountTextView"
                app:layout_constraintBottom_toBottomOf="@+id/followersCountTextView"
                style="@style/SocialStatsNumbersText"/>
        <TextView
                android:text="@string/postsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/postsTitleTextView"
                app:layout_constraintStart_toStartOf="@+id/postsCountTextView"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/postsCountTextView"
                app:layout_constraintEnd_toEndOf="@+id/postsCountTextView"
                android:textAlignment="center"
                style="@style/SecondaryTextCentered"/>

        <TextView
                android:text="@string/followersTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/followersTitleTextView"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/followersCountTextView"
                app:layout_constraintStart_toStartOf="@+id/followersCountTextView"
                app:layout_constraintEnd_toEndOf="@+id/followersCountTextView"
                style="@style/SecondaryTextCentered"/>

        <TextView
                android:text="@string/followingTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/followingTitleTextView"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/fillowingCountTextView"
                app:layout_constraintEnd_toEndOf="@+id/fillowingCountTextView"
                app:layout_constraintStart_toStartOf="@+id/fillowingCountTextView"
                app:layout_constraintHorizontal_bias="0.0"
                style="@style/SecondaryTextCentered"/>

        <TextView
                android:text="@string/loremIpsumText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/descriptionTextView"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                style="@style/PrimaryTextCentered"/>

        <TextView
                android:id="@+id/websiteTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/emailTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/divider3"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:text="@string/websiteTitle"
                style="@style/PrimaryColorBoldText"/>

        <TextView
                android:id="@+id/emailTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toEndOf="@+id/websiteTitleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:text="@string/emailTitle"
                app:layout_constraintTop_toTopOf="@+id/websiteTitleTextView"
                app:layout_constraintBottom_toBottomOf="@+id/websiteTitleTextView"
                style="@style/PrimaryColorBoldText"/>

        <TextView
                android:id="@+id/websiteValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/websiteTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/websiteTitleTextView"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintEnd_toEndOf="@+id/websiteTitleTextView"
                android:text="@string/websiteValue"
                style="@style/SecondaryText"/>

        <TextView
                android:id="@+id/emailValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/emailTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/emailTitleTextView"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="@+id/emailTitleTextView"
                android:text="@string/emailValue"
                style="@style/SecondaryText"/>

        <TextView
                android:id="@+id/phoneTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/websiteValueTextView"
                app:layout_constraintTop_toBottomOf="@+id/websiteValueTextView"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:text="@string/phoneTitle"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="@+id/websiteValueTextView"
                style="@style/PrimaryColorBoldText"/>

        <TextView
                android:id="@+id/locationTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:text="@string/locationTitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="@+id/phoneTitleTextView"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/phoneTitleTextView"
                app:layout_constraintStart_toStartOf="@+id/emailValueTextView"
                app:layout_constraintEnd_toStartOf="@+id/fab"
                android:layout_marginEnd="8dp"
                style="@style/PrimaryColorBoldText"/>

        <TextView
                android:id="@+id/phoneValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/phoneTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/phoneTitleTextView"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintEnd_toEndOf="@+id/phoneTitleTextView"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/phoneValue"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                style="@style/SecondaryText"/>

        <TextView
                android:id="@+id/locationValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/locationTitleTextView"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="@+id/locationTitleTextView"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/fab"
                android:text="@string/locationValue"
                style="@style/SecondaryText"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
